// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ControllerButtons /> Snapshot test 1`] = `
<div
  className="buttonContainer"
>
  <button
    className="button"
    onClick={[Function]}
  >
    Next
  </button>
</div>
`;

exports[`<Controllers /> Snapshot test 1`] = `
<div
  className="controllerContainer"
>
  <button
    className="controller active"
    key="0"
  />
  <button
    className="controller visted"
    key="1"
    onClick={[Function]}
  />
</div>
`;

exports[`<Form /> Snapshot test 1`] = `
<form
  className="form"
  id="mockId"
  style={
    Object {
      "right": 540,
    }
  }
>
  <div>
    mock children
  </div>
</form>
`;

exports[`<FormBlock /> Snapshot test 1`] = `
<div
  className="formBlock"
>
  <div>
    mock
  </div>
</div>
`;

exports[`<Input /> Snapshot test 1`] = `
<div
  className="inputContainer"
>
  <label
    htmlFor="mockName"
    style={
      Object {
        "fontWeight": "500",
      }
    }
  >
    mock label
  </label>
  <input
    autoComplete="on"
    className="input"
    name="mockName"
    onBlur={[MockFunction]}
    placeholder="mock placeholder"
    style={
      Object {
        "border": "2px solid red",
      }
    }
    type="text"
  />
  <p
    className="error"
  >
    mock error
  </p>
</div>
`;

exports[`<SignUpForm /> Snapshot test 1`] = `
<div
  className="SignUp"
>
  <Header
    title="Sign Up"
  />
  <View>
    <Form
      active={0}
      id="signUP-form"
    >
      <FormBlock>
        <Input
          autocomplete="email"
          error={null}
          name="Email"
          onBlur={[Function]}
          placeholder="Email *"
          type="text"
        />
        <Input
          autocomplete="new-password"
          error={null}
          name="Password"
          onBlur={[Function]}
          placeholder="Password *"
          type="password"
        />
        <Input
          autocomplete="new-password"
          error={null}
          label="Confirm Password"
          name="ConfirmPassword"
          onBlur={[Function]}
          placeholder="Confirm Password *"
          type="password"
        />
      </FormBlock>
      <FormBlock>
        <Input
          error={null}
          name="Firstname"
          onBlur={[Function]}
          placeholder="First Name *"
          type="text"
        />
        <Input
          error={null}
          name="Lastname"
          onBlur={[Function]}
          placeholder="Last Name *"
          type="text"
        />
        <Input
          name="Address"
          placeholder="Address"
          type="text"
        />
      </FormBlock>
    </Form>
  </View>
  <Controllers
    active={0}
    onClick={[Function]}
    progress={0}
  />
  <ControllerButtons
    active={0}
    onClick={[Function]}
    submit={[Function]}
  />
  <div
    style={
      Object {
        "display": "block",
        "margin": "10px auto",
        "width": "fit-content",
      }
    }
  >
    <e
      accessType="online"
      buttonText="Sign in with Google"
      clientId="1064409062816-te616f091t5s0vh9mgnkacur1oqrqpr8.apps.googleusercontent.com"
      cookiePolicy="single_host_origin"
      disabledStyle={
        Object {
          "opacity": 0.6,
        }
      }
      fetchBasicProfile={true}
      icon={true}
      isSignedIn={true}
      jsSrc="https://apis.google.com/js/api.js"
      onFailure={[Function]}
      onRequest={[Function]}
      onSuccess={[Function]}
      prompt=""
      scope="profile email"
      style={
        Object {
          "display": "block",
          "margin": "0 auto",
        }
      }
      tag="button"
      theme="light"
      type="button"
      uxMode="popup"
    />
  </div>
  <Account />
</div>
`;

exports[`<View /> Snapshot test 1`] = `
<div
  className="view"
>
  <div>
    mock
  </div>
</div>
`;
